--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   flutter_speed_dial: ^5.0.0+1
+  extended_image: 6.1.0
 
 dev_dependencies:
   flutter_test:
