--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.4
   flutter_speed_dial: ^5.0.0+1
   extended_image: 6.1.0
+  percent_indicator: ^4.1.0
 
 dev_dependencies:
   flutter_test:
